Fix line wrap + visual adjustments

--- a/src/components/forms/fields/InputFieldWithTags/InputFieldWithTags.module.scss
+++ b/src/components/forms/fields/InputFieldWithTags/InputFieldWithTags.module.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     gap: 6px;
+    padding-bottom: 1px;
     border-bottom: 1px solid bk.$theme-form-rule-default;
 
     .bk-input-field-with-tags__label {
@@ -34,6 +35,15 @@
   .bk-input-field-with-tags__container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: bk.$spacing-2;
+  }
+
+  .bk-input-field-with-tags__input-container {
+    flex-grow: 1;
+
+    input {
+      width: 100%;
+    }
   }
 }
